# chip8

./: .gitignore  1.chip8.js  2.chip8.js  Cargo.toml  LICENSE-MIT  README.md  chip8.js  index.html  rustfmt.toml  style.css
src/: cpu.rs  display.rs  keyboard.rs  lib.rs  memory.rs  stack.rs
web/: index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
