[package]
name = "chip8"
version = "0.1.0"
authors = ["Derrick van Zyl <derrick.vanzyl@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = "0.7"
getrandom = { version = "*", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
